Aggiunto collegamento WhatsApp, Mappa, Email

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <div class="logo">TABACCHI</div>
     <nav>
       <ul>
-        <li>I nostri prodotti</li>
-        <li>Chi siamo</li>
-        <li>Chatta con noi</li>
-        <li>Vieni a trovarci</li>
+        <li><a href="#prodotti">I nostri prodotti</a></li>
+        <li><a href="#chisiamo">Chi siamo</a></li>
+        <li><a href="https://wa.me/393496245124?text=Ciao%2C+vorrei+avere+informazioni+sui+prodotti+di+Tabacchi+Corrente" target="_blank">Chatta con noi</a></li>
+        <li><a href="https://www.google.com/maps?q=Via+Appia+440,+Minturno+(LT)" target="_blank">Vieni a trovarci</a></li>
       </ul>
     </nav>
   </header>
@@ -25,7 +25,7 @@
     
   </section>
 
-  <section class="chisiamo">
+  <section class="chisiamo" id="chisiamo">
     <h2>Chi siamo</h2>
     <p>
     Tabacchi e Cartoleria Corrente è un luogo dove ogni dettaglio racconta una scelta, ogni angolo riflette cura e attenzione. 
@@ -36,7 +36,7 @@
     </p>
   </section>
 
-  <section class="product-block left">
+  <section id="prodotti" class="product-block left">
     <div class="product-image">
       <img src="https://images.unsplash.com/photo-1523275335684-37898b6baf30?w=800" alt="Orologio da scrivania in legno">
     </div>
@@ -96,3 +96,10 @@
     </div>
   </section>
 </body></html>
+  <footer>
+    <div class="footer-container">
+      <a href="mailto:antoniocorrente3@gmail.com" class="contact-button">Contattaci via Email</a>
+    </div>
+  </footer>
+</body>
+</html>
